# RAG_chatbot

./: .gitignore  README.md  index.py  pyproject.toml
modules/: chat.py  chroma_inspector.py  llm.py  pdfhandler.py  vectorstore.py
